# docs/swagger.json
@@ -51,6 +51,12 @@
                             "$ref": "#/definitions/swagger.ResponseUnauthorized"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ResponseNotFound"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -204,7 +210,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/convert.APINote"
+                            "$ref": "#/definitions/util.APINote"
                         }
                     },
                     "400": {
@@ -217,6 +223,12 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/swagger.ResponseUnauthorized"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ResponseNotFound"
                         }
                     },
                     "500": {
@@ -257,6 +269,12 @@
                             "$ref": "#/definitions/swagger.ResponseNoteRetrievedRestricted"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ResponseNotFound"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -287,7 +305,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/convert.APINote"
+                                "$ref": "#/definitions/util.APINote"
                             }
                         }
                     },
@@ -295,6 +313,12 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/swagger.ResponseUnauthorized"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/swagger.ResponseNotFound"
                         }
                     },
                     "500": {
@@ -308,32 +332,6 @@
         }
     },
     "definitions": {
-        "convert.APINote": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "current_views": {
-                    "type": "integer"
-                },
-                "expires_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "max_views": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.CreateNoteRequest": {
             "type": "object",
             "required": [
@@ -421,6 +419,15 @@
                 }
             }
         },
+        "swagger.ResponseNotFound": {
+            "description": "Not found",
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "swagger.ResponseNoteRetrievedRestricted": {
             "description": "Note retrieved successfully",
             "type": "object",
@@ -478,6 +485,32 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "util.APINote": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "current_views": {
+                    "type": "integer"
+                },
+                "expires_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "max_views": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
