# pkg/api/handlers.go
@@ -24,7 +24,7 @@ func (s *Server) handleRegisterUser(c *gin.Context) {
 	var registerUserRequest models.RegisterUserRequest
 
 	if err := c.ShouldBindJSON(&registerUserRequest); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, util.NewResponseError(util.ErrBadRequest, http.StatusBadRequest))
 		return
 	}
 
@@ -33,18 +33,18 @@ func (s *Server) handleRegisterUser(c *gin.Context) {
 	err := user.SetPassword(user.Password)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(util.ErrInternalServer, http.StatusInternalServerError))
 		return
 	}
 
 	if err := s.store.CreateUser(user); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, util.NewResponseError(err, http.StatusBadRequest))
 		return
 	}
 
 	token, err := middlewares.CreateToken(registerUserRequest.Username, time.Hour*24*7)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(err, http.StatusInternalServerError))
 		return
 	}
 
@@ -63,30 +63,31 @@ func (s *Server) handleRegisterUser(c *gin.Context) {
 // @Success 200 {object} swagger.ResponseUserLoggedIn
 // @Failure 400 {object} swagger.ResponseBadRequest
 // @Failure 401 {object} swagger.ResponseUnauthorized
+// @Failure 404 {object} swagger.ResponseNotFound
 // @Failure 500 {object} swagger.ResponseInternalServerError
 // @Router /auth/login [post]
 func (s *Server) handleLoginUser(c *gin.Context) {
 	var loginUserRequest models.LoginUserRequest
 
 	if err := c.ShouldBindJSON(&loginUserRequest); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, util.NewResponseError(util.ErrBadRequest, http.StatusBadRequest))
 		return
 	}
 
 	user, err := s.store.GetUserByUsername(loginUserRequest.Username)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusNotFound, util.NewResponseError(err, http.StatusNotFound))
 		return
 	}
 
 	if err := user.CheckPassword(loginUserRequest.Password); err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid password"})
+		c.JSON(http.StatusUnauthorized, util.NewResponseError(util.ErrUnauthorized, http.StatusUnauthorized))
 		return
 	}
 
 	token, err := middlewares.CreateToken(loginUserRequest.Username, time.Hour*24*7)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to generate token"})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(err, http.StatusInternalServerError))
 		return
 	}
 
@@ -120,6 +121,7 @@ func (s *Server) handleLogoutUser(c *gin.Context) {
 // @Success 201 {object} util.APINote
 // @Failure 400 {object} swagger.ResponseBadRequest
 // @Failure 401 {object} swagger.ResponseUnauthorized
+// @Failure 404 {object} swagger.ResponseNotFound
 // @Failure 500 {object} swagger.ResponseInternalServerError
 // @Router /notes [post]
 // @Security Token
@@ -127,19 +129,19 @@ func (s *Server) handleCreateNote(c *gin.Context) {
 	var createNoteRequest models.CreateNoteRequest
 
 	if err := c.ShouldBindJSON(&createNoteRequest); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, util.NewResponseError(util.ErrBadRequest, http.StatusBadRequest))
 		return
 	}
 
 	user, exists := c.Get("user")
 	if !exists {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "user not found"})
+		c.JSON(http.StatusNotFound, util.NewResponseError(util.ErrNotFound, http.StatusNotFound))
 		return
 	}
 
 	authUser, ok := user.(*models.User)
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "invalid user type"})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(util.ErrInternalServer, http.StatusInternalServerError))
 		return
 	}
 
@@ -147,7 +149,7 @@ func (s *Server) handleCreateNote(c *gin.Context) {
 	note.UserID = authUser.ID
 
 	if err := s.store.CreateNote(note); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not create note"})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(err, http.StatusInternalServerError))
 		return
 	}
 
@@ -161,6 +163,7 @@ func (s *Server) handleCreateNote(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Note ID"
 // @Success 200 {object} swagger.ResponseNoteRetrievedRestricted
+// @Failure 404 {object} swagger.ResponseNotFound
 // @Failure 500 {object} swagger.ResponseInternalServerError
 // @Router /notes/{id} [get]
 func (s *Server) handleGetNoteByID(c *gin.Context) {
@@ -169,22 +172,22 @@ func (s *Server) handleGetNoteByID(c *gin.Context) {
 	note, err := s.store.GetNoteByID(id)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not get note might have expired or reached max views"})
+		c.JSON(http.StatusNotFound, util.NewResponseError(err, http.StatusNotFound))
 		return
 	}
 
 	if note.IsExpired() || note.HasReachedMaxViews() {
 		if err := s.store.DeleteNoteByID(id); err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "could not delete note"})
+			c.JSON(http.StatusInternalServerError, util.NewResponseError(err, http.StatusInternalServerError))
 			return
 		}
 
-		c.JSON(http.StatusNotFound, gin.H{"error": "note has expired or reached max views"})
+		c.JSON(http.StatusNotFound, util.NewResponseError(err, http.StatusNotFound))
 		return
 	}
 
 	if err := s.store.IncrementNoteViews(note.ID.String()); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not update note views"})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(err, http.StatusInternalServerError))
 		return
 	}
 
@@ -199,26 +202,27 @@ func (s *Server) handleGetNoteByID(c *gin.Context) {
 // @Produce json
 // @Success 200 {object} []util.APINote
 // @Failure 401 {object} swagger.ResponseUnauthorized
+// @Failure 404 {object} swagger.ResponseNotFound
 // @Failure 500 {object} swagger.ResponseInternalServerError
 // @Router /users/notes [get]
 // @Security Token
 func (s *Server) handleGetNotesByUserID(c *gin.Context) {
 	user, exists := c.Get("user")
 	if !exists {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "user not found"})
+		c.JSON(http.StatusNotFound, util.NewResponseError(util.ErrNotFound, http.StatusNotFound))
 		return
 	}
 
 	authUser, ok := user.(*models.User)
 	if !ok {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "invalid user type"})
+		c.JSON(http.StatusInternalServerError, util.NewResponseError(util.ErrInternalServer, http.StatusInternalServerError))
 		return
 	}
 
 	notes, err := s.store.GetNotesByUserID(int(authUser.ID))
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "could not get notes"})
+		c.JSON(http.StatusNotFound, util.NewResponseError(err, http.StatusNotFound))
 		return
 	}
 
